name:                telegame-proto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GollyTicker/Telegame
license:             GPL
license-file:        LICENSE
author:              Swaneet Sahoo
maintainer:          swaneet06@hotmail.com
copyright:           2018 Swaneet Sahoo
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable telegame-proto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       multiset >= 0.3.4
  other-modules:       Base, Interference, GameState, View, Maps
